adds gradient background to body

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <h1>Hello, World.</h1>
+    <img id="hand" src="img/sc-logo.svg" alt="santa cruz logo">
   </body>
 </html>
