adds default styles and main nav

--- a/index.html
+++ b/index.html
@@ -3,13 +3,31 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Page Title</title>
+    <title>Santa Cruz Decks</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Hello, World.</h1>
-    <img id="hand" src="img/sc-logo.svg" alt="santa cruz logo">
+    <nav class="main-nav">
+      <div class="brand">
+        <img src="img/sc-logo.svg" alt="santa cruz logo" >
+        <h1>Site Title</h1>
+      </div>
+      <div class="nav-links">
+        <a href="#" class="active">Decks</a>
+        <a href="#">Artists</a>
+        <a href="#">Skaters</a>
+        <a href="#">About</a>
+      </div>
+    </nav>
+    <main>
+      <p>Pabst tilde humblebrag etsy. Chia cliche banjo subway tile wolf pickled forage. Try-hard 8-bit iceland health goth authentic, retro gochujang pitchfork synth forage photo booth viral selvage. Bicycle rights selfies hashtag mixtape, messenger bag sriracha listicle. Adaptogen next level tumblr neutra.</p>
+      <p>Umami pok pok squid cronut slow-carb cornhole, poke selvage try-hard. Yr cliche lo-fi kickstarter wayfarers ramps tumeric stumptown XOXO aesthetic butcher cold-pressed. Letterpress deep v lumbersexual, freegan celiac iceland polaroid. DIY activated charcoal tofu, kogi migas retro cred yuccie raw denim church-key franzen lyft quinoa ramps iPhone.</p>
+      <ul><li>I am a list item</li></ul>
+    </main>
   </body>
 </html>
