adds hero unit image

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <a href="#">About</a>
       </div>
     </nav>
+    <header>
+      <img src="img/wall.jpg" alt="screaming hand wallpaper">
+    </header>
     <main>
       <p>Pabst tilde humblebrag etsy. Chia cliche banjo subway tile wolf pickled forage. Try-hard 8-bit iceland health goth authentic, retro gochujang pitchfork synth forage photo booth viral selvage. Bicycle rights selfies hashtag mixtape, messenger bag sriracha listicle. Adaptogen next level tumblr neutra.</p>
       <p>Umami pok pok squid cronut slow-carb cornhole, poke selvage try-hard. Yr cliche lo-fi kickstarter wayfarers ramps tumeric stumptown XOXO aesthetic butcher cold-pressed. Letterpress deep v lumbersexual, freegan celiac iceland polaroid. DIY activated charcoal tofu, kogi migas retro cred yuccie raw denim church-key franzen lyft quinoa ramps iPhone.</p>
