...the rest of the f@*%ing owl

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/style.css">
@@ -18,19 +19,91 @@
         <h1>Site Title</h1>
       </div>
       <div class="nav-links">
-        <a href="#" class="active">Decks</a>
         <a href="#">Artists</a>
         <a href="#">Skaters</a>
+        <a href="#" class="active">Decks</a>
         <a href="#">About</a>
       </div>
     </nav>
-    <header>
-      <img src="img/wall.jpg" alt="screaming hand wallpaper">
-    </header>
     <main>
-      <p>Pabst tilde humblebrag etsy. Chia cliche banjo subway tile wolf pickled forage. Try-hard 8-bit iceland health goth authentic, retro gochujang pitchfork synth forage photo booth viral selvage. Bicycle rights selfies hashtag mixtape, messenger bag sriracha listicle. Adaptogen next level tumblr neutra.</p>
-      <p>Umami pok pok squid cronut slow-carb cornhole, poke selvage try-hard. Yr cliche lo-fi kickstarter wayfarers ramps tumeric stumptown XOXO aesthetic butcher cold-pressed. Letterpress deep v lumbersexual, freegan celiac iceland polaroid. DIY activated charcoal tofu, kogi migas retro cred yuccie raw denim church-key franzen lyft quinoa ramps iPhone.</p>
-      <ul><li>I am a list item</li></ul>
+      <header>
+        <img src="img/wall.jpg" alt="screaming hand wallpaper">
+      </header>
+      <figure class="quote">
+        <blockquote>
+          <p>Bold, eye-catching graphic design and mind-numbing illustrations that are right at home being grinded off a skateboard or being hung in a downtown art gallery.<br><span class="cite">—Jimbo Phillips</span></p>
+        </blockquote>
+      </figure>
+      <section class="odd">
+        <div class="img">
+          <img src="img/starwars.jpg" alt="" >
+        </div>
+        <div class="glass-outer">
+          <div class="glass-inner">
+            <h3>Star Wars Decks</h3>
+            <p>Commissioned by Lucasfilm Ltd. and using official Star Wars imagery, these decks exemplify the way Santa Cruz kept it's finger on the pulse of popular culture and tapped into widespread phenomena like Star Wars, the Simpsons, and more.</p>
+            <button class="btn" href="#">More</button>
+          </div>
+        </div><!--end .glass-outer-->
+      </section><!--end section-->
+      <hr>
+      <section class="even">
+        <div class="glass-outer">
+          <div class="glass-inner">
+            <h3>Marvel Comics Decks</h3>
+            <p>In another example of first-class crossover content, these officially-licensed screaming hand decks were some of Jimbo Phillip's finest work for Santa Cruz. Aside from the superheros represented here, Santa Cruz also made popular decks for Spider-man, Wolverine, and several others.</p>
+            <button class="btn" href="#">More</button>
+          </div>
+        </div><!--end .glass-outer-->
+        <div class="img">
+          <img src="img/marvel2.jpg" alt="" >
+        </div>
+      </section><!--end section-->
+      <hr>
+      <section class="odd">
+        <div class="img">
+          <img src="img/4-hands.png" alt="" >
+        </div>
+        <div class="glass-outer">
+          <div class="glass-inner">
+            <h3>Screaming Hand Decks</h3>
+            <p>Jimbo Phillips' original screaming hand artwork was reproduced in many different forms over the years, including these four classic poses that appear on the 40<sup>th</sup> Anniversary decks. There's a screaming hand for everyone, no matter their attitude.</p>
+            <button class="btn" href="#">More</button>
+          </div>
+        </div><!--end .glass-outer-->
+      </section><!--end section-->
+      <hr>
+      <section class="even">
+        <div class="glass-outer">
+          <div class="glass-inner">
+            <h3>Rob Roskopp Decks</h3>
+            <p>Legendary skateboarder Rob Roskopp went on to found Santa Cruz Bicycles, one of the sports' greatest brands, in 1993. Back in the day, Roskopp's decks had some of the sickest art around drawn by none other than, you guessed it, Jimbo Phillips. </p>
+            <button class="btn" href="#">More</button>
+          </div>
+        </div><!--end .glass-outer-->
+        <div class="img">
+          <img src="img/deck5.png" alt="" >
+        </div>
+      </section><!--end section-->
+      <hr>
+      <section class="odd">
+        <div class="img">
+          <img src="img/dressen.jpg" alt="" >
+        </div>
+        <div class="glass-outer">
+          <div class="glass-inner">
+            <h3>Eric Dressen Decks</h3>
+            <p>Reknowned artist, tatooist, and skateboarder, Eric Dressen, created some surreal 80's-Dogtown-inspired deck artwork such as the four decks shown here. Dressen's decks were highly sought-after and today they remains highly collectible. </p>
+            <button class="btn" href="#">More</button>
+          </div>
+        </div><!--end .glass-outer-->
+      </section><!--end section-->
+      <hr>
     </main>
+    <footer>
+      <p>&copy; 2021 Eric York</p>
+      <p>Skateboard IP belongs to the copyright holders</p>
+      <a href="#">Privacy Policy</a>
+    </footer>
   </body>
 </html>
