oops: fixes a text typo

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="glass-outer">
           <div class="glass-inner">
             <h3>Eric Dressen Decks</h3>
-            <p>Reknowned artist, tatooist, and skateboarder Eric Dressen created some the surreal 80's-Dogtown-inspired deck artwork shown on these four decks. Dressen's work us highly sought-after and today they are among the most highly collectible skate decks. </p>
+            <p>Reknowned artist, tatooist, and skateboarder Eric Dressen created the surreal 80's-Dogtown-inspired deck artwork shown on these four decks. Dressen's work us highly sought-after and today they are among the most highly collectible skate decks. </p>
             <button class="btn" href="#">More &#10140;</button>
           </div>
         </div><!--end .glass-outer-->
