removes redundant words

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="glass-outer">
           <div class="glass-inner">
-            <h3>Star Wars Decks</h3>
+            <h3>Star Wars</h3>
             <p>Commissioned by Lucasfilm Ltd. and using official Star Wars imagery, these decks exemplify the way Santa Cruz kept it's finger on the pulse of popular culture and tapped into widespread phenomena like Star Wars, the Simpsons, and more.</p>
             <button class="btn" href="#">More &#10140;</button>
           </div>
@@ -50,7 +50,7 @@
       <section class="even">
         <div class="glass-outer">
           <div class="glass-inner">
-            <h3>Marvel Comics Decks</h3>
+            <h3>Marvel Comics</h3>
             <p>In another example of first-class crossover content, these officially-licensed screaming hand decks were some of Jimbo Phillip's finest work for Santa Cruz. Aside from the superheros represented here, Santa Cruz also made popular decks for Spider-man, Wolverine, and several others.</p>
             <button class="btn" href="#">More &#10140;</button>
           </div>
@@ -66,7 +66,7 @@
         </div>
         <div class="glass-outer">
           <div class="glass-inner">
-            <h3>Screaming Hand Decks</h3>
+            <h3>Screaming Hand</h3>
             <p>Jimbo Phillips' original screaming hand artwork was reproduced in many different forms over the years, including these four classic poses that appear on the 40<sup>th</sup> Anniversary decks. There's a screaming hand for everyone, no matter their attitude.</p>
             <button class="btn" href="#">More &#10140;</button>
           </div>
@@ -76,7 +76,7 @@
       <section class="even">
         <div class="glass-outer">
           <div class="glass-inner">
-            <h3>Rob Roskopp Decks</h3>
+            <h3>Rob Roskopp</h3>
             <p>Legendary skateboarder Rob Roskopp went on to found Santa Cruz Bicycles, one of the sports' greatest brands, in 1993. Back in the day, Roskopp's decks had some of the sickest art around drawn by none other than, you guessed it, Jimbo Phillips. </p>
             <button class="btn" href="#">More &#10140;</button>
           </div>
@@ -92,7 +92,7 @@
         </div>
         <div class="glass-outer">
           <div class="glass-inner">
-            <h3>Eric Dressen Decks</h3>
+            <h3>Eric Dressen</h3>
             <p>Reknowned artist, tatooist, and skateboarder Eric Dressen created the surreal 80's-Dogtown-inspired deck artwork shown on these four decks. Dressen's work us highly sought-after and today they are among the most highly collectible skate decks. </p>
             <button class="btn" href="#">More &#10140;</button>
           </div>
