adds alt-text for remaining images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </figure>
       <section class="odd">
         <div class="img">
-          <img src="img/starwars.jpg" alt="" >
+          <img src="img/starwars.jpg" alt="four skateboard decks in a row with Star Wars characters on them" >
         </div>
         <div class="glass-outer">
           <div class="glass-inner">
@@ -56,13 +56,13 @@
           </div>
         </div><!--end .glass-outer-->
         <div class="img">
-          <img src="img/marvel2.jpg" alt="" >
+          <img src="img/marvel2.jpg" alt="screaming hand artwork in the style of four Marvel comics superheroes" >
         </div>
       </section><!--end section-->
       <hr>
       <section class="odd">
         <div class="img">
-          <img src="img/4-hands.png" alt="" >
+          <img src="img/4-hands.png" alt="Four screaming hands in various poses" >
         </div>
         <div class="glass-outer">
           <div class="glass-inner">
@@ -82,13 +82,13 @@
           </div>
         </div><!--end .glass-outer-->
         <div class="img">
-          <img src="img/deck5.png" alt="" >
+          <img src="img/deck5.png" alt="five decks in different colors, showing off three different Rob Roskopp designs" >
         </div>
       </section><!--end section-->
       <hr>
       <section class="odd">
         <div class="img">
-          <img src="img/dressen.jpg" alt="" >
+          <img src="img/dressen.jpg" alt="four skateboard decks featuring the skull art of Eric Dressen" >
         </div>
         <div class="glass-outer">
           <div class="glass-inner">
